--- a/weather/src/styles/_rain.scss
+++ b/weather/src/styles/_rain.scss
@@ -5,6 +5,10 @@ $rain: (
     url(../assets/backgrounds/cloudy_md.svg) repeat,
     linear-gradient(to bottom, #87b0f0, #b1c0d4) fixed,
   ),
+  background_color_small: (
+    url(../assets/backgrounds/cloudy_md.svg) repeat,
+    linear-gradient(to bottom, #87b0f0, #b1c0d4) fixed,
+  ),
   background_color_wide: (
     url(../assets/backgrounds/cloudy_bg.svg) repeat,
     linear-gradient(to bottom, #4e71a9, #b1c0d4) fixed,
