--- a/weather/src/styles/_cloudy_day.scss
+++ b/weather/src/styles/_cloudy_day.scss
@@ -1,17 +1,16 @@
 @use "./variables" as *;
 
-$day: (
+$cloudy_day: (
   background_color: (
-    url(../assets/backgrounds/Clouds-200s.svg) repeat,
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
-  ),
-  background_color_small: (
-    url(../assets/backgrounds/Clouds-200s.svg) repeat,
+    url(../assets/backgrounds/sea_clouds_md.svg) repeat,
     linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   background_color_wide: (
-    url(../assets/backgrounds/clouds_bg.svg) repeat,
-
+    url(../assets/backgrounds/sea_clouds_lg.svg) repeat,
+    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
+  ),
+  background_color_small: (
+    url(../assets/backgrounds/sea_clouds_sm.svg) repeat,
     linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   searchbar_color: #a0d5f9,
