--- a/weather/src/styles/_cloudy_day.scss
+++ b/weather/src/styles/_cloudy_day.scss
@@ -1,17 +1,12 @@
-@use "./variables" as *;
-
 $cloudy_day: (
   background_color: (
     url(../assets/backgrounds/sea_clouds_md.svg) repeat,
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   background_color_wide: (
     url(../assets/backgrounds/sea_clouds_lg.svg) repeat,
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   background_color_small: (
     url(../assets/backgrounds/sea_clouds_sm.svg) repeat,
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   searchbar_color: #a0d5f9,
 
@@ -19,10 +14,10 @@ $cloudy_day: (
   forecast_box_color: rgba(#aedefe, 0.7),
   text_color: #f6f8fb,
   title_color: #f6f8fb,
-  forecast_title_color: $title_color,
-  forecast_text_color: $text_color,
+  forecast_title_color: #5a7cb3,
+  forecast_text_color: #4e71a9,
 
-  btn_color: $white,
-  btn_hover: $baby_blue,
-  btn_text: $black,
+  btn_color: #fff,
+  btn_hover: rgba(226, 240, 251, 1),
+  btn_text: #000,
 );
