--- a/weather/src/styles/_day.scss
+++ b/weather/src/styles/_day.scss
@@ -1,18 +1,16 @@
-@use "./variables" as *;
-
 $day: (
   background_color: (
     url(../assets/backgrounds/Clouds-200s.svg) repeat,
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
+    linear-gradient(to bottom, #c3e6f9, #31a1ec) fixed,
   ),
   background_color_small: (
     url(../assets/backgrounds/Clouds-200s.svg) repeat,
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
+    linear-gradient(to bottom, #c3e6f9, #31a1ec) fixed,
   ),
   background_color_wide: (
     url(../assets/backgrounds/clouds_bg.svg) repeat,
 
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
+    linear-gradient(to bottom, #c3e6f9, #31a1ec) fixed,
   ),
   searchbar_color: #a0d5f9,
 
@@ -20,10 +18,10 @@ $day: (
   forecast_box_color: rgba(#aedefe, 0.7),
   text_color: #f6f8fb,
   title_color: #f6f8fb,
-  forecast_title_color: $title_color,
-  forecast_text_color: $text_color,
+  forecast_title_color: #5a7cb3,
+  forecast_text_color: #4e71a9,
 
-  btn_color: $white,
-  btn_hover: $baby_blue,
-  btn_text: $black,
+  btn_color: #fff,
+  btn_hover: rgba(226, 240, 251, 1),
+  btn_text: #000,
 );
