--- a/weather/src/assets/icons/Sun.scss
+++ b/weather/src/assets/icons/Sun.scss
@@ -1,5 +1,3 @@
-@use "../../styles/variables" as *;
-
 @keyframes rotation {
   100% {
     transform: rotate(360deg);
@@ -9,7 +7,7 @@
 .icon__sun {
   height: 8rem;
   width: 8rem;
-  background: linear-gradient(45deg, $orange 40%, $yellow);
+  background: linear-gradient(45deg, #f09559 40%, #f0ca43);
   border-radius: 50%;
   filter: drop-shadow(0 0 0.625rem rgba(239, 218, 144, 0.4))
     drop-shadow(0 0 1.875rem rgba(240, 202, 67, 0.4));
@@ -30,7 +28,7 @@
   border-radius: 1rem;
   width: 1rem;
   height: 1.5rem;
-  background: linear-gradient(90deg, $darker_yellow, $yellow);
+  background: linear-gradient(90deg, #f0b343, #f0ca43);
 
   transform-origin: 50% 6.9rem;
 }
