--- a/weather/src/styles/_cloudy_night.scss
+++ b/weather/src/styles/_cloudy_night.scss
@@ -1,17 +1,12 @@
-@use "./variables" as *;
-
 $cloudy_night: (
   background_color: (
     url(../assets/backgrounds/cloudy_night_md.svg) repeat,
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   background_color_wide: (
     url(../assets/backgrounds/cloudy_night_bg.svg) repeat,
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   background_color_small: (
     url(../assets/backgrounds/cloudy_night_sm.svg) repeat,
-    linear-gradient(to bottom, $bg_light_blue, $bg_blue) fixed,
   ),
   searchbar_color: #494f77,
   weather_box_color: linear-gradient(90deg, #41466a, #292c42),
@@ -24,5 +19,5 @@ $cloudy_night: (
 
   btn_color: #515884,
   btn_hover: #424767,
-  btn_text: $white,
+  btn_text: #fff,
 );
