--- a/weather/src/styles/_mixins.scss
+++ b/weather/src/styles/_mixins.scss
@@ -1,4 +1,3 @@
-@use "./variables" as *;
 @import "./day.scss";
 @import "./cloudy_day.scss";
 @import "./cloudy_night.scss";
@@ -30,7 +29,7 @@ $themes: (
   width: 18rem;
   height: 9rem;
   border-radius: 50%;
-  box-shadow: -36rem 38rem 7rem darken($bg_light_blue, 10%);
+  box-shadow: -36rem 38rem 7rem darken(#c3e6f9, 10%);
 }
 
 @mixin reset_btn {
