--- a/weather/src/components/SearchBar/SearchBar.module.scss
+++ b/weather/src/components/SearchBar/SearchBar.module.scss
@@ -41,7 +41,7 @@
     &::placeholder {
       font-size: 1.2rem;
       text-transform: lowercase;
-      color: #fff;
+      color: rgb(231, 231, 231);
     }
 
     &:focus {
